add docker-compose.yml and Dockerfile
