# controller/controller/post.go
@@ -28,41 +28,19 @@ const (
 // @Tags 帖子相关
 // @Accept application/json
 // @Produce application/json
-// @Param Authorization header string false "Bearer 用户令牌"
-// @Param Mode query int false "获取帖子的模式"
-// @Param ID query int false "社区ID/用户ID"
-// @Param Page query int false "分页页码"
-// @Param Max query int false "每页最大数量"
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param object query model.ParamPost true "获取帖子的模式"
 // @Security ApiKeyAuth
 // @Success 200 {object} model.ResponseStruct
 // @Router /PostList [get]
 func PostList(c *gin.Context) {
 	//cc := pbCommunity.NewCommunityClient(GrpcConnAuth)
-	mode := c.DefaultQuery(Mode, "0") // mode获取帖子的模式 0为社区 1为个人
-	iMode, err := StoA(mode, c)
+	// 1.获取请求参数
+	v := new(model.ParamPost)
+	// 2.校验有效性(使用validator来进行校验)
+	err := ParameterVerification(c, v)
 	if err != nil {
 		return
-	}
-	id := c.DefaultQuery(ID, "0") // id 社区id或用户id
-	iId, err := StoA(id, c)
-	if err != nil {
-		return
-	}
-	page := c.DefaultQuery(Page, "1")
-	iPage, err := StoA(page, c)
-	if err != nil {
-		return
-	}
-	max := c.DefaultQuery(Max, "10")
-	iMax, err := StoA(max, c)
-	if err != nil {
-		return
-	}
-	if iPage <= 0 {
-		iPage = 1 // page不能小于0
-	}
-	if iMax <= 0 {
-		iMax = 1 // max不能小于0
 	}
 	cc := pbPost.NewPostClient(GrpcConnAuth)
 	// 获取请求头的token
@@ -70,13 +48,13 @@ func PostList(c *gin.Context) {
 	if err != nil {
 		return
 	}
-	switch iMode {
+	switch v.Mode {
 	case 0:
 		r, err := cc.PostList(ctx, &pbPost.GetPostListRequest{
-			Model: (pbPost.GetPostListRequest_State)(iMode),
-			ID:    &pbPost.GetPostListRequest_CommunityID{CommunityID: int64(iId)},
-			Page:  int64(iPage),
-			Max:   int64(iMax),
+			Model: (pbPost.GetPostListRequest_State)(v.Mode),
+			ID:    &pbPost.GetPostListRequest_CommunityID{CommunityID: int64(v.ID)},
+			Page:  int64(v.Page),
+			Max:   int64(v.Max),
 		})
 		if err != nil {
 			zap.L().Error("PostList", zap.Error(err))
@@ -86,10 +64,10 @@ func PostList(c *gin.Context) {
 		model.ResponseSuccess(c, gmodel.GinResponse((*pb.Response)(r)))
 	case 1:
 		r, err := cc.PostList(ctx, &pbPost.GetPostListRequest{
-			Model: (pbPost.GetPostListRequest_State)(iMode),
-			ID:    &pbPost.GetPostListRequest_AuthorID{AuthorID: int64(iId)},
-			Page:  int64(iPage),
-			Max:   int64(iMax),
+			Model: (pbPost.GetPostListRequest_State)(v.Mode),
+			ID:    &pbPost.GetPostListRequest_AuthorID{AuthorID: int64(v.ID)},
+			Page:  int64(v.Page),
+			Max:   int64(v.Max),
 		})
 		if err != nil {
 			zap.L().Error("PostList", zap.Error(err))
@@ -106,8 +84,8 @@ func PostList(c *gin.Context) {
 // @Tags 帖子相关
 // @Accept application/json
 // @Produce application/json
-// @Param Authorization header string false "Bearer 用户令牌"
-// @Param object query model.CreatePost false "创建帖子参数"
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param object body model.CreatePost true "创建帖子参数"
 // @Security ApiKeyAuth
 // @Success 200 {object} model.ResponseStruct
 // @Router /CreatePost [post]
@@ -146,19 +124,16 @@ func CreatePost(c *gin.Context) {
 // @Tags 帖子相关
 // @Accept application/json
 // @Produce application/json
-// @Param Authorization header string false "Bearer 用户令牌"
-// @Param ID query int false "帖子ID"
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param object query model.ParamPostID true "帖子ID"
 // @Security ApiKeyAuth
 // @Success 200 {object} model.ResponseStruct
 // @Router /GetPostDetail [get]
 func GetPostDetail(c *gin.Context) {
-	// 获取帖子id
-	id := c.Query(ID)
-	if id == "" {
-		model.ResponseError(c, model.CodeInvalidParams)
-		return
-	}
-	iid, err := StoA(id, c)
+	// 参数校验
+	rq := new(model.ParamPostID)
+	// 2.校验有效性(使用validator来进行校验)
+	err := ParameterVerification(c, rq)
 	if err != nil {
 		return
 	}
@@ -169,7 +144,7 @@ func GetPostDetail(c *gin.Context) {
 		return
 	}
 	r, err := cc.GetPostDetail(ctx, &pbPost.GetPostDetailRequest{
-		PostID: int64(iid),
+		PostID: rq.ID,
 	})
 	if err != nil {
 		zap.L().Error("GetPostDetail", zap.Error(err))
